# AUV-ROV_simple_simulator

./: .gitignore  Simulation.launch  commands  lag.slx  simulation.launch
src/auv_gazebo/launch/: AUV_spawn.launch  boat_world.launch
src/pipe/: CMakeLists.txt  package.xml
src/pipe/launch/: display.launch  gazebo.launch
src/pipe/meshes/: base_link.STL
src/pipe/urdf/: pipe.gazebo  pipe.urdf  pipe.xacro
src/rov_twist/: CMakeLists.txt  package.xml
src/rov_twist/scripts/: move.py
